Stop using core-list. Because of layout problem. Use template repeat instead.

--- a/app.css
+++ b/app.css
@@ -41,13 +41,13 @@ core-toolbar{
 	font-family: sans-serif;
 }
 .thread-name{
-	padding-bottom:30px;font-weight: bold;
+	padding-bottom:5px;font-weight: bold;
 }
 .thread-subject{
-	padding-top:10xp;padding-bottom:15px;font-size:14px;font-weight: bold;
+	padding-top:5px;padding-bottom:5px;font-size:14px;font-weight: bold;
 }
-core-list .row{
-	height:80px;
+.thread-card{
+	min-height:60px;
 	width:95%;
 	background-color: white;
 	padding:16px;
@@ -55,6 +55,7 @@ core-list .row{
 -moz-box-shadow: 0px 2px 2px 2px rgba(0,0,0,0.5);
 box-shadow: 0px 2px 2px 2px rgba(0,0,0,0.5);
 }
+
 .email-header{
 	height:15px;
 	background-color: white;
